@@ -105,6 +105,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hbase
 operator|.
 name|KeyValue
@@ -186,6 +200,20 @@ operator|.
 name|io
 operator|.
 name|Writable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|WritableFactories
 import|;
 end_import
 
@@ -1115,13 +1143,28 @@ operator|=
 operator|(
 name|Filter
 operator|)
-name|HbaseObjectWritable
+name|createForName
+argument_list|(
+name|Bytes
 operator|.
-name|readObject
+name|toString
+argument_list|(
+name|Bytes
+operator|.
+name|readByteArray
 argument_list|(
 name|in
-argument_list|,
-literal|null
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|filter
+operator|.
+name|readFields
+argument_list|(
+name|in
 argument_list|)
 expr_stmt|;
 block|}
@@ -1361,21 +1404,31 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
-name|HbaseObjectWritable
+name|Bytes
 operator|.
-name|writeObject
+name|writeByteArray
 argument_list|(
 name|out
 argument_list|,
-name|this
+name|Bytes
 operator|.
+name|toBytes
+argument_list|(
 name|filter
-argument_list|,
-name|Filter
 operator|.
-name|class
-argument_list|,
-literal|null
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|filter
+operator|.
+name|write
+argument_list|(
+name|out
 argument_list|)
 expr_stmt|;
 block|}
@@ -1497,6 +1550,74 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+block|}
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+specifier|private
+name|Writable
+name|createForName
+parameter_list|(
+name|String
+name|className
+parameter_list|)
+block|{
+try|try
+block|{
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|Writable
+argument_list|>
+name|clazz
+init|=
+operator|(
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|Writable
+argument_list|>
+operator|)
+name|Class
+operator|.
+name|forName
+argument_list|(
+name|className
+argument_list|)
+decl_stmt|;
+return|return
+name|WritableFactories
+operator|.
+name|newInstance
+argument_list|(
+name|clazz
+argument_list|,
+operator|new
+name|Configuration
+argument_list|()
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|ClassNotFoundException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"Can't find class "
+operator|+
+name|className
+argument_list|)
+throw|;
 block|}
 block|}
 block|}
